--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "slim/http": "^1.0",
         "laminas/laminas-diactoros": "^2.25",
         "nyholm/psr7": "^1.7",
-        "php-di/php-di": "^7.0"
+        "php-di/php-di": "^7.0",
+        "tuupola/cors-middleware": "^1.4"
     }
 }
