--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "psr-4": {
             "Controllers\\": "controllers/",
             "Models\\": "models/",
-            "Utils\\": "utils/"
+            "Utils\\": "utils/",
+            "Repositories\\": "repositories"
         }
     },
     "require": {
